--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ ADMIN_EMAIL = "admin@example.com"
 ADMIN_PASSWORD = "greatstack123"
 
 # MongoDB Setup ( required )
-MONGODB_URI = "mongodb+srv://Shanmugapriyan:Shanmu12345@cluster0.4zkzv.mongodb.net"
+MONGODB_URI = "mongodb+srv://shanmugapriyant711_db_user:Shanmu123456@cluster0.lw7kyfm.mongodb.net"
 
 # Cloudinary Setup ( required )
 CLOUDINARY_NAME = "di2dnxqup"
